# health-ojimpo

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  scheduler.py
backend/app/migrations/: 001_initial.sql  002_phase2.sql  003_sync_gateway.sql  004_kashidashi_cd.sql  005_anthropic_usage.sql  006_github_openai.sql  007_claude_local.sql  008_score_method.sql  009_category_weights.sql  010_oura_weights.sql  011_strava_commute.sql  012_decay_half_life.sql  013_rename_gcal_holiday.sql  014_strava_voluntary.sql  015_notification.sql  016_nextdns_shopping.sql  017_nextdns_sns.sql  018_nextdns_vitality.sql  019_stash_vitality.sql  020_nextdns_outing.sql  021_coding_card_only.sql  022_strava_cleanup.sql  023_kashidashi_tuning.sql  024_spotify_podcast.sql  025_cleanup_coming_soon.sql  026_intervals_weight.sql  026_kashidashi_cleanup_music.sql  027_claude_session_minutes.sql  028_lastfm_decay.sql  028_spotify_podcast_dedupe.sql  029_unify_score_thresholds.sql
backend/app/models/: enums.py  schemas.py
backend/app/routers/: dashboard.py  ingest.py  notification.py  oauth.py  settings.py  shared.py
backend/app/services/: aggregation.py  anthropic_usage.py  claude_local.py  email_notify.py  github.py  http_retry.py  ingest.py  lastfm.py  line_notify.py  notification.py  oauth.py  openai_usage.py  scoring.py  trend.py
backend/app/sources/: anthropic_usage.py  base.py  claude_local.py  github.py  gmail.py  google_calendar.py  intervals_icu.py  kashidashi.py  (+13 more)
(+68 files in other folders)
